[package]
name = "gpu_fii_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { git = "https://github.com/bradyjoestar/era-heavy-ops-service.git", branch = "main", features=["gpu"], default-features=false}
